modify scan fignerprint touch

--- a/auto-tool-520/citApk/MeigRS32/app/src/main/res/values/strings.xml
+++ b/auto-tool-520/citApk/MeigRS32/app/src/main/res/values/strings.xml
@@ -1114,4 +1114,7 @@
     <string name="oemscan_version">OEMSCAN VERSION: </string>
     <string name="oemscan_info">OEMSCAN INFO: </string>
     <string name="psam_version">PSAM_Version: </string>
+
+
+    <string name="PCBAAutoTouchTestActivity"> Touch Test</string>
 </resources>
