--- a/auto-tool-520/citApk/MeigRS32/app/src/main/res/values/strings.xml
+++ b/auto-tool-520/citApk/MeigRS32/app/src/main/res/values/strings.xml
@@ -1116,5 +1116,8 @@
     <string name="psam_version">PSAM_Version: </string>
 
 
-    <string name="PCBAAutoTouchTestActivity"> Touch Test</string>
+    <string name="PCBAAutoTouchTestActivity">Touch Test</string>
+    <string name="PCBAAutoLCDRGBActivity">LCD RGB Test</string>
+    <string name="PCBAAutoLEDActivity">LED Test</string>
+    <string name="PCBAAutoLCDBrightnessActivity">LCD Brightness Test</string>
 </resources>
