--- a/auto-tool-520/citApk/MeigRS32/app/src/main/res/values-zh-rCN/strings.xml
+++ b/auto-tool-520/citApk/MeigRS32/app/src/main/res/values-zh-rCN/strings.xml
@@ -1067,6 +1067,12 @@
     <string name="oemscan_info">扫码内容: </string>
     <string name="psam_version">PSAM 版本号: </string>
 
+    <string name="i2c_test_fail">I2C测试失败！</string>
+    <string name="i2c_reset_fail">I2C重置失败！</string>
+    <string name="i2c_test_start">I2C测试开始</string>
+    <string name="uart_test_fail">UART测试失败！</string>
+    <string name="uart_reset_fail">UART重置失败！</string>
+    <string name="uart_test_start">UART测试开始</string>
     <string name="PCBAAutoTouchTestActivity">触屏测试</string>
     <string name="PCBAAutoLCDRGBActivity">屏幕测试</string>
     <string name="PCBAAutoLEDActivity">LED灯测试</string>
